# Uni-Demo

./: .gitignore  CMakeLists.txt  Main.qml  README.md  images.qrc  main.cpp  resources.qrc
Auth/: LandingView.qml  LoginView.qml  RegisterView.qml
AuthenticationServices/: AuthManager.cpp  AuthManager.h  MockAuthService.cpp  MockAuthService.h
Core/Compose/: ComposeStackView.qml
Core/Compose/Subview/: CameraManager.qml  ComposeCourseView.qml  ComposeLiveView.qml  ComposePostView.qml  ComposeStoryView.qml
Core/Discover/: DiscoverStackView.qml
Core/Discover/Subview/: CategoryContentView.qml  DiscoverLearnView.qml
Core/Learn/: LearnStackView.qml
Core/Learn/Delegate/: CourseViewDelegate.qml  ForYouDelegate.qml  HistoryDelegate.qml  LessonViewDelegate.qml  SubjectDelegate.qml
Core/Learn/Subview/: CareerPathView.qml  CourseView.qml  LearnSearchView.qml  SubtopicView.qml
Core/Media/: MediaStackView.qml
Core/Media/Subview/: MediaSearchView.qml
Core/Media/Subview/Category/: LiveCategoryView.qml  Movies_TVCategoryView.qml
Core/Media/Subview/Model/: MediaDetailModel.qml
Core/Profile/: ProfileHeaderView.qml  ProfileStackView.qml
Core/Profile/Subview/: ActivityView.qml  ChatView.qml  InboxView.qml  ProfileEditorView.qml
MediaServices/: GalleryManager.cpp  GalleryManager.h  MediaFeedModel.cpp  MediaFeedModel.h  MockUploadService.cpp  MockUploadService.h  Upload.cpp  Upload.h  UploadManager.cpp  UploadManager.h  UtilityManager.cpp  UtilityManager.h
MessageServices/: ConversationManager.cpp  ConversationManager.h
Shared/: CreatorDashboardStackView.qml  MediaPlayerView.qml  PhotoDelegate.qml  PhotoThreadView.qml  PostDelegate.qml  ProfilePreview.qml  ProfilePreviewHeader.qml  VideoDelegate.qml
UserServices/: ProfileModel.cpp  ProfileModel.h  User.cpp  User.h  UserManager.cpp  UserManager.h
android/: AndroidManifest.xml  build.gradle
android/res/xml/: qtprovider_paths.xml
android/src/org/qtproject/example/appUniDemo/: UniDemoActivity.java
qml/: AppShell.qml  AuthView.qml  ComposeView.qml  DiscoverView.qml  FeedView.qml  LearnView.qml  ProfileView.qml
qml/components/: InteractionBar.qml  MediaCard.qml  PhotoCard.qml  PostCard.qml  SectionHeader.qml  StatPill.qml
services/: MediaFeedModel.cpp  MediaFeedModel.h  MockAuthService.cpp  MockAuthService.h  MockUploadService.cpp  MockUploadService.h  ProfileModel.cpp  ProfileModel.h
